tests/paczka1/small_fuzzy/83891009.err
Error in line 7: 8wKB7S S481 45,8
Error in line 6: Gr9jy A667 87,6
